# cdn

./: .gitignore  main.py  netlify.toml  pyproject.toml  setup.sh
downloads/: pyodide.py
utils/: bz2.py  fs.py  http.py  progress.py  sync.py  tar.py
